--- a/README.adoc
+++ b/README.adoc
@@ -2,6 +2,8 @@
 :sectnums:
 :toc: left
 
+image:./docs/gsv1.gif[]
+
 == Usage
 
 [source,bash]
@@ -9,5 +11,5 @@
 cat sample.csv
 cat sample.csv | gsv
 cat sample.csv | gsv | grep test
-cat sample.csv | gsv | grep test | gsv -ungsv
+cat sample.csv | gsv | grep test | gsv -u
 ----
