--- a/README.adoc
+++ b/README.adoc
@@ -5,7 +5,7 @@
 image:https://github.com/jiro4989/gsv/actions/workflows/go-test.yml/badge.svg[test, link="https://github.com/jiro4989/gsv/actions/workflows/go-test.yml"]
 image:https://codecov.io/gh/jiro4989/gsv/branch/main/graph/badge.svg[codecov, link="https://codecov.io/gh/jiro4989/gsv"]
 
-`gsv` transforms a multi-line CSV into one-line CSV to make it easier to `grep`.
+`gsv` transforms a multi-line CSV into one-line JSON to make it easier to `grep`.
 `gsv` is heavily inspired by https://github.com/tomnomnom/gron[gron].
 
 image:./docs/gsv1.png[]
