chore: fix usage

--- a/README.adoc
+++ b/README.adoc
@@ -43,10 +43,7 @@ Japanese,"太郎
 
 [source,bash]
 ----
-cat sample.csv
-cat sample.csv | gsv
-cat sample.csv | gsv | grep test
-cat sample.csv | gsv | grep test | gsv -u
+gsv <csv_file> | grep '<pattern>' | gsv -u
 ----
 
 == Installation
